// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsTab should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Permissions
            </label>
            <div
              class="mocked-styled-58 el-multi-select-input-wrapper"
            >
              <input
                class="mocked-styled-57 el-multi-select-input"
                id="app-edit-scopes-select"
                label="Permissions"
                name="scopes"
              />
              <div
                aria-label="Multi selected options"
                class="mocked-styled-55 el-multi-select-selected"
                role="listbox"
              >
                <span
                  class="el-ml2 el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name task"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <p>
                  Please select from the options below
                </p>
              </div>
              <div
                aria-label="Multi unselected options"
                class="mocked-styled-56 el-multi-select-un-selected"
                role="listbox"
              >
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Reapit Products
            </label>
            <div
              class="mocked-styled-58 el-multi-select-input-wrapper"
            >
              <input
                class="mocked-styled-57 el-multi-select-input"
                id="app-edit-products-select"
                label="Reapit Products"
                name="products"
              />
              <div
                aria-label="Multi selected options"
                class="mocked-styled-55 el-multi-select-selected"
                role="listbox"
              >
                <span
                  class="el-ml2 el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name task"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <p>
                  Please select from the options below
                </p>
              </div>
              <div
                aria-label="Multi unselected options"
                class="mocked-styled-56 el-multi-select-un-selected"
                role="listbox"
              >
                <input
                  aria-checked="false"
                  aria-hidden="true"
                  class="mocked-styled-52 el-multi-select-checkbox"
                  id="test-static-id"
                  role="option"
                  type="checkbox"
                />
                <label
                  class="el-has-grey-chips el-multi-select-label"
                  for="test-static-id"
                  role="option"
                  tabindex="0"
                >
                  MOCK_NAME
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </p>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Private App
            </label>
            <input
              class="mocked-styled-125 el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="el-has-grey-bg el-toggle-label"
              for="app-edit-is-private-app"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                Yes
              </span>
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-134 el-input-wrap-med"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Permissions
          </label>
          <div
            class="mocked-styled-58 el-multi-select-input-wrapper"
          >
            <input
              class="mocked-styled-57 el-multi-select-input"
              id="app-edit-scopes-select"
              label="Permissions"
              name="scopes"
            />
            <div
              aria-label="Multi selected options"
              class="mocked-styled-55 el-multi-select-selected"
              role="listbox"
            >
              <span
                class="el-ml2 el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name task"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
            <div
              aria-label="Multi unselected options"
              class="mocked-styled-56 el-multi-select-un-selected"
              role="listbox"
            >
              <input
                aria-checked="false"
                aria-hidden="true"
                class="mocked-styled-52 el-multi-select-checkbox"
                id="test-static-id"
                role="option"
                type="checkbox"
              />
              <label
                class="el-has-grey-chips el-multi-select-label"
                for="test-static-id"
                role="option"
                tabindex="0"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Reapit Products
          </label>
          <div
            class="mocked-styled-58 el-multi-select-input-wrapper"
          >
            <input
              class="mocked-styled-57 el-multi-select-input"
              id="app-edit-products-select"
              label="Reapit Products"
              name="products"
            />
            <div
              aria-label="Multi selected options"
              class="mocked-styled-55 el-multi-select-selected"
              role="listbox"
            >
              <span
                class="el-ml2 el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name task"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
            <div
              aria-label="Multi unselected options"
              class="mocked-styled-56 el-multi-select-un-selected"
              role="listbox"
            >
              <input
                aria-checked="false"
                aria-hidden="true"
                class="mocked-styled-52 el-multi-select-checkbox"
                id="test-static-id"
                role="option"
                type="checkbox"
              />
              <label
                class="el-has-grey-chips el-multi-select-label"
                for="test-static-id"
                role="option"
                tabindex="0"
              >
                MOCK_NAME
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </p>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Private App
          </label>
          <input
            class="mocked-styled-125 el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="el-has-grey-bg el-toggle-label"
            for="app-edit-is-private-app"
            role="button"
            tabindex="0"
          >
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              Yes
            </span>
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-134 el-input-wrap-med"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PermissionsTab should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="el-form-layout-has-margin el-form-layout"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="el-form-layout-has-margin el-form-layout"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </p>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="el-form-layout-has-margin el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <label
              class="mocked-styled-41 el-label"
            >
              Private App
            </label>
            <input
              class="mocked-styled-125 el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="el-has-grey-bg el-toggle-label"
              for="app-edit-is-private-app"
              role="button"
              tabindex="0"
            >
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                Yes
              </span>
              <span
                class="mocked-styled-123 el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-134 el-input-wrap-med"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type text"
              class="mocked-styled-38 el-input"
              disabled=""
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="el-form-layout-has-margin el-form-layout"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="el-form-layout-has-margin el-form-layout"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </p>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="el-form-layout-has-margin el-form-layout"
    >
      <div
        class="mocked-styled-133 el-input-wrap"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <label
            class="mocked-styled-41 el-label"
          >
            Private App
          </label>
          <input
            class="mocked-styled-125 el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="el-has-grey-bg el-toggle-label"
            for="app-edit-is-private-app"
            role="button"
            tabindex="0"
          >
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              Yes
            </span>
            <span
              class="mocked-styled-123 el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-134 el-input-wrap-med"
      >
        <div
          class="mocked-styled-40 el-input-group"
        >
          <input
            aria-label="Input type text"
            class="mocked-styled-38 el-input"
            disabled=""
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
